@@ -41,8 +41,6 @@ struct poller_funcs {
 	int (*fd_check)(struct io_poller *poller);
 	int (*add)(struct io_poller *poller, io_atom *atom, int flags);
 	int (*remove)(struct io_poller *poller, io_atom *atom);	
-	int (*enable)(struct io_poller *poller, io_atom *atom, int flags);
-	int (*disable)(struct io_poller *poller, io_atom *atom, int flags);
 	int (*set)(struct io_poller *poller, io_atom *atom, int flags);
 	int (*wait)(struct io_poller *poller, unsigned int timeout);
 	void (*dispatch)(struct io_poller *poller);
@@ -78,8 +76,8 @@ int io_poller_init(io_poller *poller);
 #define io_fd_check(a)		(*(a)->funcs.fd_check)((io_poller*)&(a)->poller_data)
 #define io_add(a,b,c)		(*(a)->funcs.add)((io_poller*)&(a)->poller_data,b,c)
 #define io_remove(a,b)		(*(a)->funcs.remove)((io_poller*)&(a)->poller_data,b)
-#define io_enable(a,b,c)	(*(a)->funcs.enable)((io_poller*)&(a)->poller_data,b,c)
-#define io_disable(a,b,c)	(*(a)->funcs.disable)((io_poller*)&(a)->poller_data,b,c)
 #define io_set(a,b,c)		(*(a)->funcs.set)((io_poller*)&(a)->poller_data,b,c)
 #define io_wait(a,b)		(*(a)->funcs.wait)((io_poller*)&(a)->poller_data,b)
 #define io_dispatch(a)		(*(a)->funcs.dispatch)(a)
+
+
