@@ -43,8 +43,6 @@ int io_select_poller_dispose(io_select_poller *poller);
 int io_select_fd_check(io_select_poller *poller);
 int io_select_add(io_select_poller *poller, io_atom *atom, int flags);
 int io_select_set(io_select_poller *poller, io_atom *atom, int flags);
-int io_select_enable(io_select_poller *poller, io_atom *atom, int flags);
-int io_select_disable(io_select_poller *poller, io_atom *atom, int flags);
 int io_select_remove(io_select_poller *poller, io_atom *atom);
 int io_select_wait(io_select_poller *poller, unsigned int timeout);
 int io_select_dispatch(struct io_poller *poller);
